fix budget status bugs